# uring-rs

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  offsets.rs  params.rs  queue.rs
src/completion/: mod.rs
src/completion_queue/: mod.rs
src/submission/: entry.rs  mod.rs
src/submission_queue/: entry.rs  mod.rs
tests/: next_sqe.rs  noop.rs  read.rs  read_write.rs  submission_queue.rs
